--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -3,6 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1 maximum-scale=1 user-scalable=0 minimal-ui" />
     <title>Color Blocks Blitz!</title>
     <link rel="stylesheet" href="css/game.css" type="text/css" />
     <script src="js/vendor.js"></script>
