--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1 maximum-scale=1 user-scalable=0 minimal-ui" />
-    <title>Color Blocks Blitz!</title>
+    <title>Color Blindness Blitz!</title>
     <link rel="stylesheet" href="css/game.css" type="text/css" />
     <script src="js/vendor.js"></script>
     <script src="js/game.js"></script>
