--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1 maximum-scale=1 user-scalable=0 minimal-ui" />
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="mobile-web-app-capable" content="yes"/>
     <title>Color Blindness Blitz!</title>
     <link rel="stylesheet" href="css/game.css" type="text/css" />
     <script src="js/vendor.js"></script>
